Refactored abs( ) to not use deprecated constructor